--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/tomekpap/fbWebhookStarter#readme",
   "dependencies": {
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
